Fixed some responsiveness issues on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,8 +18,8 @@ body {
   font-family: "Fraunces", sans-serif;
 }
 
-// STAND OUT SECTION
-.stand-out {
+// TRANDSFORM YOUR BRAND AND STAND OUT TO THE RIGHT AUDIENCE SECTION
+.image-text-grid {
   display: flex;
   flex-wrap: wrap;
 
@@ -28,16 +28,28 @@ body {
 
     .left-wrapper {
       background-image: url("../images/desktop/image-transform.jpg");
+
+      @media screen and (max-width: 414px) {
+        background-image: url("../images/mobile/image-transform.jpg");
+      }
     }
 
     .right-wrapper {
       .content {
         h3 {
           max-width: 80%;
+
+          @media screen and (max-width: 800px) {
+            max-width: 100%;
+          }
         }
 
         p {
           max-width: 86%;
+
+          @media screen and (max-width: 800px) {
+            max-width: 100%;
+          }
         }
 
         a {
@@ -54,7 +66,7 @@ body {
     flex: 0 0 50%;
     max-width: 50%;
 
-    @media screen and (max-width: 375px) {
+    @media screen and (max-width: 800px) {
       flex: 0 0 100%;
       max-width: 100%;
       width: 100%;
@@ -69,6 +81,11 @@ body {
     background-size: cover;
     height: 600px;
     object-fit: cover;
+
+    @media screen and (max-width: 414px) {
+      height: 350px;
+      background-image: url("../images/mobile/image-stand-out.jpg");
+    }
   }
 
   .right-wrapper {
@@ -81,10 +98,19 @@ body {
       padding: 20px;
       max-width: 540px;
 
+      @media screen and (max-width: 800px) {
+        text-align: center;
+        padding: 80px 30px;
+      }
+
       h3 {
         font-size: 40px;
         margin-bottom: 30px;
         font-weight: 900;
+
+        @media screen and (max-width: 414px) {
+          font-size: 30px;
+        }
       }
 
       p {
@@ -94,6 +120,10 @@ body {
         font-weight: 600;
         font-size: 17px;
         max-width: 80%;
+
+        @media screen and (max-width: 800px) {
+          max-width: 100%;
+        }
       }
 
       a {
@@ -159,7 +189,7 @@ body {
       }
     }
 
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: 800px) {
       flex: 0 0 100%;
       max-width: 100%;
       width: 100%;
